# agencia_de_noticias_IA

./: .env.exemplo  README.md  Time Noticias IA.excalidraw  pyproject.toml
agencia_usando_agno/: main.py  time_agentes_agno.py
agencia_usando_agno/agentes/: escritor.py  pesquisador.py
agencia_usando_langgraph/: main.py  time_agentes_langgraph.py
agencia_usando_langgraph/agentes/: escritor.py  pesquisador.py
